# RnD_fun

./: .gitmodules
DistccHostsSynchroniser/distcc_host_synchroniser/: CMakeLists.txt  main.cpp
DistccHostsSynchroniser/distcc_host_synchroniser/Synca/: dispatcher.cpp  dispatcher.h  task.cpp
DockerFun/developer_docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
DockerFun/developer_python/: Dockerfile  build.sh  run.sh
DockerFun/developer_shell/: Dockerfile  build.sh  run.sh
PimpleVisitor/: CMakeLists.txt  class_tranferer.h  class_transferer.cpp  generator.cpp  generator.h  main.cpp  processor.cpp  processor.h  secretclass.cpp  secretclass.h  transferer_pimpl.h
Synca/: CMakeLists.txt  dispatcher.h  task.h  test.cpp
Synca/caldav_add_todo/: README.md  nextcloud_todos.py
TelegramBot/: Dockerfile  README.md  build.sh  entrypoint.sh  main.py  run.sh
TestDlib/: CMakeLists.txt  main.cpp  utils.h
calender_rad/: README.md  main.py
deprecated/: check.sh  main.cc
flatbuffers_tests/: a.out  main.cc  rpc_protocol.fbs  rpc_protocol_generated.h
icecc-fun/: Dockerfile
privatbank_python_api/: privatbank_client.py
